# nortek_nucleus_dvl_1000_ros1

./: CMakeLists.txt  package.xml
nucleus_clients/: command.py  connect_serial.py  connect_tcp.py  disconnect.py  field_calibration.py  start.py  stop.py
nucleus_node/: nucleus_node.py
nucleus_subscribers/: ahrs_packets.py  altimeter_packets.py  bottom_track_packets.py  current_profile_packets.py  field_calibration_packets.py  imu_packets.py  ins_packets.py  magnetometer_packets.py  water_track_packets.py
